Fix item details banner image alignment

--- a/src/assets/css/librarybrowser.scss
+++ b/src/assets/css/librarybrowser.scss
@@ -439,7 +439,7 @@
 .itemBackdrop {
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center 0;
+    background-position: center center;
     background-attachment: fixed;
     height: 40vh;
     position: relative;
